--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase": "^12.7.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.5.0",
     "react-router": "^7.11.0",
     "react-toastify": "^11.0.5",
