--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-icons/all-files": "^4.1.0",
     "@tailwindcss/vite": "^4.1.18",
     "firebase": "^12.7.0",
+    "framer-motion": "^12.23.26",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-fast-marquee": "^1.6.5",
